--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
     "redux-promise": "^0.5.3",
-    "url-loader": "^0.5.8"
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
