--- a/package.json
+++ b/package.json
@@ -33,7 +33,20 @@
     "redux-form": "^6.6.1",
     "redux-promise": "^0.5.3",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.3"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
+    "react-scripts": "0.9.5",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2",
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
