--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2",
+    "webpack-dev-server": "^2.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
